-CREACIÓN MODULO RECURSOS REVISIÓN -menú principal -desarrollo de función bandeja de registro de recurso de revisión con sus funciones "agregar recurso de revisión y "expediente digital del recurso de revisión" -case de las demás opcipnes por programar

--- a/SolicitudesAPI/SolicitudesAPI.csproj
+++ b/SolicitudesAPI/SolicitudesAPI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
+	  <PackageReference Include="QuestPDF" Version="2023.12.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
